# simple_cnn_tutorial

./: .gitignore  .mbed  CMakeLists.txt  LICENSE  Makefile  Pipfile  README.md  cifar10_cnn.ckpt  cifar10_cnn.pb  img_data.h  main.cpp  model.py  prepare_test_data.py  requirements.txt  train.py  train_cnn.py  uTensor.lib
